# seriesoftubes

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .tubes.example.yaml  Dockerfile  Dockerfile.dev  Dockerfile.worker  LICENSE  README.md  alembic.ini  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  redis.conf  test-error-details-workflow.yaml  test_defaults.yaml
alembic/: env.py
alembic/versions/: 282f82529b59_add_progress_column_to_executions.py  a15dbfb85e3e_add_storage_keys_to_executions_table.py  c8283a587f70_add_error_details_field_to_executions.py
docs/: configuration-guide.md  development-setup.md  docker-architecture.md  security.md  workflow-guide.md
docs/guides/: schema-validation.md  workflow-structure.md
docs/reference/: quick-reference.md
docs/reference/nodes/: aggregate.md  conditional.md  file.md  filter.md  foreach.md  http.md  join.md  llm.md  python.md  route.md  split.md  transform.md
examples/: cache-config-demo.yaml  complex-dag-test.yaml  dag-test.yaml  foreach-aggregate-demo.yaml  parallel-processing-demo.yaml  schema-validation-demo.yaml  simple-dag-test.yaml  story-generator-demo.yaml  streaming_python_test.yaml
examples/data-analysis/: README.md  sample_data.json  workflow.yaml
examples/data-flow-demo/: workflow.yaml
examples/document-analysis/: workflow.yaml
examples/simple-test/: workflow.yaml
examples/test-validation/: README.md  valid-workflow.yaml  validation-test.yaml
frontend/: .dockerignore  .env.example  .prettierignore  Dockerfile  Dockerfile.dev  eslint.config.js  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: PythonNodeOutput.tsx
frontend/src/components/Auth/: ProtectedRoute.tsx
frontend/src/components/DAGVisualization/: DAGVisualization.tsx  index.ts
frontend/src/components/NewWorkflowModal/: NewWorkflowModal.tsx  index.ts
frontend/src/components/RunWorkflowModal/: RunWorkflowModal.test.tsx  RunWorkflowModal.tsx  index.ts
frontend/src/components/WorkflowDetail/: WorkflowDetail.test.tsx  WorkflowDetail.tsx  index.ts
frontend/src/components/WorkflowList/: WorkflowList.test.tsx  WorkflowList.tsx
frontend/src/components/YamlEditor/: YamlEditorModal.tsx  index.ts
frontend/src/pages/Auth/: LoginPage.tsx
frontend/src/pages/Documentation/: DocumentationPage.tsx  index.ts
frontend/src/pages/Executions/: ExecutionDetail.tsx  ExecutionsPage.tsx  index.ts
frontend/src/pages/Files/: FilesPage.tsx
frontend/src/pages/Testing/: TestingPage.tsx  index.ts
frontend/src/pages/Workflows/: WorkflowsPage.tsx
frontend/src/stores/: auth.ts  execution.ts  theme.ts
frontend/src/templates/: workflows.ts
frontend/src/test/: setup.test.ts  setup.ts  test-utils.tsx
frontend/src/test/mocks/: handlers.ts  server.ts
frontend/src/types/: workflow.ts
schemas/: vscode-settings.json  workflow-schema.json
schemas/nodes/: aggregate-node.json  conditional-node.json  file-node.json  filter-node.json  foreach-node.json  http-node.json  join-node.json  llm-node.json  python-node.json  split-node.json  transform-node.json
scripts/: generate_docs.py  generate_json_schema.py  setup-dev.sh
src/seriesoftubes/: __init__.py  celery_config.py  cli.py  config.py  config_validation.py  engine.py  file_security.py  models.py  parser.py  secure_python.py  secure_python_streaming.py  tasks.py  tasks_sync.py  template_engine.py  utils.py
src/seriesoftubes/api/: __init__.py  auth.py  auth_routes.py  cache_routes.py  docs_routes.py  execution.py  execution_routes.py  execution_sync.py  file_routes.py  main.py  models.py  workflow_routes.py
src/seriesoftubes/cache/: __init__.py  base.py  decorators.py  factory.py  keys.py  manager.py  memory.py  redis.py  test_redis.py
src/seriesoftubes/cli/: __init__.py  auth.py  client.py  docs.py  generate_config.py  main.py  workflow.py
src/seriesoftubes/db/: __init__.py  database.py  models.py
src/seriesoftubes/docs/: __init__.py  schema_parser.py
src/seriesoftubes/nodes/: __init__.py  aggregate.py  base.py  conditional.py  file.py  filter.py  foreach.py  http.py  http_sync.py  join.py  llm.py  python.py  python_streaming.py  route.py  split.py  transform.py
src/seriesoftubes/providers/: __init__.py  anthropic.py  base.py  factory.py  openai.py
src/seriesoftubes/schemas/: __init__.py  workflow-schema.yaml
src/seriesoftubes/storage/: __init__.py  base.py  factory.py  local.py  s3.py
tests/: __init__.py  conftest.py  test_api.py  test_cache.py  test_cache_hypothesis.py  test_cache_integration.py  test_cli.py  test_cli_integration.py  test_config.py  test_config_validation.py  test_conftest.py  test_data_flow_primitives.py  test_data_flow_schemas.py  test_engine.py  test_execution_hypothesis.py  test_execution_status.py  test_file_security.py  test_nodes.py  test_parallel_execution.py  test_parser.py  test_parser_hypothesis.py  test_schema_hypothesis.py  test_schema_validation.py  test_secure_python.py  test_storage.py  test_template_engine.py
tests/test_api/: __init__.py  test_auth_routes.py  test_docs_routes.py  test_endpoints.py  test_execution.py  test_execution_routes.py  test_file_routes.py  test_workflow_routes.py
tests/test_integration/: __init__.py  test_llm_providers.py
tests/test_nodes/: __init__.py  test_aggregate_node.py  test_base_node.py  test_conditional_node.py  test_data_flow_hypothesis.py  test_file_node.py  test_file_node_security.py  test_file_node_storage.py  test_foreach_node.py  test_http_node.py  test_join_node.py  test_llm_node.py  test_nested_context.py  test_python_node.py  test_route_node.py  test_schema_validation.py  test_transform_node_hypothesis.py
tests/test_providers/: test_openai_refusals.py
