[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seriesoftubes"
dynamic = ["version"]
description = "LLM Workflow Orchestration Platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Nelson Love", email = "nelson@nelson.love" },
]
keywords = ["llm", "workflow", "orchestration", "dag", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "jsonschema>=4.0.0",
    "openai>=1.90.0",  # For structured outputs support
    "RestrictedPython>=7.0",  # For secure Python code execution
    "python-dotenv>=1.0.0",  # For loading .env files
]

[project.optional-dependencies]
api = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "sse-starlette>=1.6.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",  # For PostgreSQL
    "aiosqlite>=0.19.0",  # For SQLite
    "email-validator>=2.2.0",
    "greenlet>=3.2.3",
    "python-jose[cryptography]>=3.3.0",  # For JWT
    "passlib[bcrypt]>=1.7.4",  # For password hashing
]
docs = [
    # Optional dependencies for document processing
    "PyPDF2>=3.0.0",
    "python-docx>=1.0.0",
    "openpyxl>=3.1.0",
    "beautifulsoup4>=4.12.0",
]
dev = [
    "hypothesis>=6.135.16",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.6.0",
    "ruff>=0.1.0",
    "black>=23.9.0",
    "pre-commit>=3.5.0",
    "httpx>=0.25.0",  # for testing
    "types-click>=7.1.8",
    "types-PyYAML>=6.0.12.20250516",
    "fakeredis>=2.21.0",  # for testing Redis functionality
]
cache = [
    "redis>=5.0.0",  # for production Redis caching
]
all = [
    "seriesoftubes[api,dev]",
]

[project.urls]
Homepage = "https://github.com/nelsonlove/seriesoftubes"
Repository = "https://github.com/nelsonlove/seriesoftubes"
Issues = "https://github.com/nelsonlove/seriesoftubes/issues"

[project.scripts]
s10s = "seriesoftubes.cli:app"

[tool.hatch.version]
path = "src/seriesoftubes/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/seriesoftubes"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-cov",
    "mypy",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=seriesoftubes --cov=tests {args}"
cov-report = ["test-cov", "coverage report"]
cov-html = ["test-cov", "coverage html"]
type-check = "mypy --install-types --non-interactive {args:src/seriesoftubes tests}"

[tool.hatch.envs.lint]
detached = true
dependencies = [
    "black",
    "ruff",
]

[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/seriesoftubes tests}"
style = [
    "ruff check {args:.}",
    "black --check --diff {args:.}",
]
fmt = [
    "black {args:.}",
    "ruff check --fix {args:.}",
    "style",
]
all = [
    "style",
    "typing",
]

[tool.hatch.envs.api]
features = ["api"]

[tool.hatch.envs.api.scripts]
serve = "uvicorn seriesoftubes.api.main:app --reload --host 0.0.0.0 --port 8000"
serve-prod = "uvicorn seriesoftubes.api.main:app --host 0.0.0.0 --port 8000"

# Tool configurations
[tool.coverage.run]
source_pkgs = ["seriesoftubes", "tests"]
branch = true
parallel = true
omit = [
    "src/seriesoftubes/__about__.py",
]

[tool.coverage.paths]
seriesoftubes = ["src/seriesoftubes", "*/seriesoftubes/src/seriesoftubes"]
tests = ["tests", "*/seriesoftubes/tests"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
warn_return_any = false
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = ["typer", "rich.*", "fastapi", "uvicorn", "sse_starlette.*", "PyPDF2", "docx", "openpyxl", "bs4"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "seriesoftubes.api.*"
# FastAPI uses dependency injection and Pydantic models extensively
# These patterns can trigger false positives with strict typing
warn_unused_ignores = false

[tool.ruff]
target-version = "py310"
line-length = 88

# Per-file ignores are defined later in the file

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "B",
    "C",
    "DTZ",
    "E",
    "EM",
    "F",
    "FBT",
    "I",
    "ICN",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "Q",
    "RUF",
    "S",
    "T",
    "TID",
    "UP",
    "W",
    "YTT",
]
ignore = [
    # Allow non-abstract empty methods in abstract base classes
    "B027",
    # Ignore checks for possible passwords
    "S105", "S106", "S107",
    # Ignore complexity warnings - these should be addressed case-by-case
    "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
    # Magic value comparison - sometimes literals are clearer than constants
    "PLR2004",
    # Line too long - handled by black formatter
    "E501",
]
unfixable = [
    # Don't touch unused imports
    "F401",
]

[tool.ruff.lint.isort]
known-first-party = ["seriesoftubes"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252", "ARG001", "ARG002", "D100", "D101", "D102", "D103", "D104", "N806"]

# FastAPI and Typer have framework-specific patterns that trigger false positives
# API routes: FastAPI's Depends() pattern and 'id' field names
"src/seriesoftubes/api/**/*.py" = [
    "B008",  # FastAPI's Depends() is a function call in argument defaults
    "A003",  # 'id' is a common field name in APIs, not shadowing builtin
]

# CLI: Typer's boolean flags and Option patterns
"src/seriesoftubes/cli/**/*.py" = [
    "FBT001", "FBT002",  # Boolean positional args are how Typer handles flags
    "B008",  # Typer's Option() is also a function call in defaults
]

# Scripts and notebooks can have more relaxed rules
"scripts/**/*.py" = ["T201", "S101"]  # Allow print() and asserts in scripts
"notebooks/**/*.py" = ["T201", "S101", "E402"]  # Also allow imports not at top

[tool.black]
target-version = ["py310"]
line-length = 88
skip-string-normalization = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Integration tests in tests/test_integration/ are skipped by default
# To run them: OPENAI_API_KEY=xxx RUN_EXPENSIVE_TESTS=true pytest tests/test_integration/
